--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
@@ -10,7 +10,7 @@
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />
     
-    <ui:define name="explorerColumns">
+    <ui:define name="specDetailColumns">
         <p:column headerText="#{bundle.Pattern}" sortBy="#{item.pattern}">
             #{item.pattern}
         </p:column>
