--- a/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
@@ -15,7 +15,7 @@
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />            
     
-    <ui:define name="explorerColumns">          
+    <ui:define name="specDetailColumns">          
          <p:column headerText="#{bundle.Code}" sortBy="#{item.code}">
             #{item.code}
         </p:column>
