--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
@@ -16,7 +16,7 @@
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateCompany}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateDepartament}" />
     
-    <ui:define name="explorerColumns"> 
+    <ui:define name="specDetailColumns"> 
         <p:column headerText="#{bundle.Code}" sortBy="#{item.code}">
             #{item.code}
         </p:column>
