--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-explorer.xhtml
@@ -15,7 +15,7 @@
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateChildGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateDocType}" />
     
-    <ui:define name="explorerColumns"> 
+    <ui:define name="specDetailColumns"> 
         <p:column headerText="#{bundle.Code}" sortBy="#{item.code}">
             #{item.code}
         </p:column>
