--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -81,6 +81,9 @@
                             <p:commandLink value="#{bundle.Numerators}" title="#{bundle.NumeratorsPatterns}"
                                            ajax="false"
                                            action="numPatternsExpl"/>
+                            <p:commandLink value="#{bundle.Statuses}"
+                                           ajax="false"
+                                           action="docstatus-explorer"/>
                             <p:commandLink value="TEST" 
                                            action="#{sessionBean.test()}"/>
                         </p:panelGrid>
