--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
@@ -20,7 +20,7 @@
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />
     
     <!-- специфичные поля таблицы обозревателя -->
-    <ui:define name="explorerColumns">
+    <ui:define name="specDetailColumns">
         <p:column headerText="#{bundle.FullName}">
             #{item.fullName}
         </p:column>
