--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
@@ -55,7 +55,7 @@
                     <ui:param name="_itemPanel" value="managerPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.Chief}"/>
                     <ui:param name="_selectorBean" value="#{staffBean}"/>
-                    <ui:param name="_items" value="#{departmentCardBean.staffs}"/>
+                    <ui:param name="_items" value="#{staffBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setChief"/>
                     <ui:param name="_actionSelect" value="onChiefSelected"/>
                     <ui:param name="_update" value=""/>
