--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
@@ -5,7 +5,7 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
     <p:tab title="#{bundle.Versions}" >
-        <h:panelGrid columns="1" styleClass="ui-panelgrid-blank" style="width: 100%;">
+        <p:panelGrid columns="1" layout="grid" styleClass="ui-grid-col-12" columnClasses="ui-grid-col-12" style="font-size: 90%;">
             <p:fileUpload id="file" 
                           disabled="#{_bean.isReadOnly()}"
                           allowTypes="/(\.|\/)(pdf|docx|doc|rtf|txt|odt|zip|rar|png|tiff|gif|jpe?g)$/"
@@ -38,28 +38,28 @@
                                     styleClass="img-required"/>
                 </p:column>
 
-                <p:column headerText="#{bundle.Number}" sortBy="#{attache.number}" width="50" >
+                <p:column headerText="#{bundle.Number}" sortBy="#{attache.number}" >
                     <h:outputLabel value="#{attache.number}" />
                 </p:column>
 
-                <p:column headerText="#{bundle.Name}" sortBy="#{attache.name}" width="120">
+                <p:column headerText="#{bundle.Name}" sortBy="#{attache.name}" >
                     <h:outputLabel value="#{attache.name}" />
                 </p:column>
 
-                <p:column headerText="#{bundle.Author}" sortBy="#{attache.author.shortFIO}" width="100">
+                <p:column headerText="#{bundle.Author}" sortBy="#{attache.author.shortFIO}" >
                     <h:outputLabel value="#{attache.author.shortFIO}" />
                 </p:column>   
 
-                <p:column headerText="#{bundle.DateCreate}" sortBy="#{attache.dateCreate}" width="80">
+                <p:column headerText="#{bundle.DateCreate}" sortBy="#{attache.dateCreate}">
                     <h:outputLabel value="#{attache.dateCreate}" >
                         <f:convertDateTime pattern="dd.MM.yy: HH.mm"/>
                     </h:outputLabel>
                 </p:column> 
 
-                <p:column width="100">
-                    <p:splitButton icon="ui-icon-zoomin" title="#{bundle.View}" value="#{bundle.View}"
-                                     process="versionsTBL" 
-                                     actionListener="#{_bean.onViewAttache(attache)}">
+                <p:column >
+                    <p:splitButton  title="#{bundle.View}" value="#{bundle.View}"
+                                    process="versionsTBL" 
+                                    actionListener="#{_bean.onViewAttache(attache)}">
                         <p:menuitem icon="ui-icon-arrowthickstop-1-s" title="#{bundle.Download}" value="#{bundle.Download}"
                                     process="versionsTBL" ajax="false"
                                     disabled="#{_bean.isReadOnly()}"
@@ -71,7 +71,7 @@
                                     update="versionsTBL"
                                     actionListener="#{_bean.makeCurrentVersion(attache)}">
                             <p:confirm header="#{bundle.ChangeVersion}" message="#{bundle.ChangeCurrentVersion}" icon="fa-question-circle" />
-                        </p:menuitem>    
+                        </p:menuitem> 
                         <p:menuitem icon="ui-icon-trash" value="#{bundle.Delete}" title="#{bundle.Delete}"
                                     process="versionsTBL"
                                     disabled="#{_bean.isReadOnly()}"
@@ -82,7 +82,7 @@
                     </p:splitButton>
                 </p:column>
             </p:dataTable>            
-        </h:panelGrid>
+        </p:panelGrid>
     </p:tab>
 </ui:composition>
 
