--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -54,7 +54,7 @@
     <ui:param name="_updates" value="#{fileUploadFRM}" />
     
     <!-- специфичные поля таблицы обозревателя -->
-    <ui:define name="explorerColumns">
+    <ui:define name="specDetailColumns">
         <p:column headerText="#{bundle.Number}" sortBy="#{item.number}" >
             <h:outputText value="#{item.regNumber}"/>
         </p:column>
