--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -11,26 +11,42 @@
             <f:event type="preRenderView" listener="#{attacheBean.onOpenCard()}"/>
         </f:metadata>
     </ui:define>
-    
+
     <ui:define name="title">
         #{bundle.View}
     </ui:define>
 
     <ui:define name="body">
         <h:form id="docViewerFRM">  
-            <p:outputPanel style="width: 100%;" rendered="#{attacheBean.content != null}">
-                <pe:documentViewer value="#{attacheBean.content}" 
-                                   height="700" style="width: 100%;"/>
-            </p:outputPanel>
+            <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
+                <p:outputPanel style="width: 100%;" rendered="#{attacheBean.content != null}">
+                    <pe:documentViewer value="#{attacheBean.content}" 
+                                       height="700" style="width: 100%;"/>
+                </p:outputPanel>
 
-            <p:toolbar styleClass="ui-grid-col-12">
-                <f:facet name="right">
-                    <p:commandButton value="#{bundle.Close}" style="float:right;"
-                                     title="#{bundle.Close}"
-                                     action="#{attacheBean.onCloseCard()}"> 
-                    </p:commandButton> 
-                </f:facet>
-            </p:toolbar>
+                <p:panel styleClass="ui-grid-col-12" rendered="#{attacheBean.content == null}">
+                    <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <p:outputLabel value="#{bundle.DocumentPreviewIisNotAvailable}"/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                    </p:panelGrid>
+                </p:panel>
+
+                <p:toolbar styleClass="ui-grid-col-12">
+                    <f:facet name="right">
+                        <p:commandButton value="#{bundle.Close}" style="float:right;"
+                                         title="#{bundle.Close}"
+                                         action="#{attacheBean.onCloseCard()}"> 
+                        </p:commandButton> 
+                    </f:facet>
+                </p:toolbar>
+            </p:panelGrid>
         </h:form>
 
     </ui:define>
