--- a/escom-bpm-web/src/main/webapp/view/partners/partner-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-сard.xhtml
@@ -28,7 +28,7 @@
                                  onchange="return itemChange = 1;"
                                  required="#{param['isRequired'] == 'true'}"                                  
                                  requiredMessage="#{bundle.Field} [#{bundle.Type}] #{bundle.MustBeFilled}">
-                    <f:selectItems value="#{partnersCardBean.partnerTypes}" var="types" itemLabel="#{types.name}" itemValue="#{types}" />
+                    <f:selectItems value="#{partnerTypesBean.findAll()}" var="types" itemLabel="#{types.name}" itemValue="#{types}" />
                     <f:selectItem value="#{null}" itemLabel="#{bundle.EmptySelData}" itemValue="#{null}"/>                         
                 </p:selectOneMenu>
                 <p:message for="type" display="tooltip"/>
