--- a/escom-bpm-web/src/main/resources/print/card-item.jrxml
+++ b/escom-bpm-web/src/main/resources/print/card-item.jrxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="91b4b311-f2c8-4859-84d1-54d518bf3415">
-	<property name="ireport.zoom" value="1.0"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Карточка объекта" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="91b4b311-f2c8-4859-84d1-54d518bf3415">
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="19"/>
 	<style name="Default" isDefault="true" pdfFontName="Times-Roman" pdfEncoding="Cp1251"/>
+	<parameter name="BARCODE" class="java.lang.String"/>
+	<queryString>
+		<![CDATA[]]>
+	</queryString>
 	<field name="name" class="java.lang.String"/>
 	<field name="dateCreate" class="java.util.Date"/>
 	<field name="author.shortFIO" class="java.lang.String"/>
@@ -29,7 +33,7 @@
 				<text><![CDATA[Наименование]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="0" width="100" height="20" uuid="0489bc04-97c0-4ae0-9f0a-2ac73b915522"/>
+				<reportElement x="154" y="0" width="100" height="20" uuid="0489bc04-97c0-4ae0-9f0a-2ac73b915522"/>
 				<text><![CDATA[author.shortFIO]]></text>
 			</staticText>
 		</band>
@@ -50,13 +54,19 @@
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="0" width="100" height="20" uuid="f33dd4f5-5c6f-471b-aa83-1139a20b260d"/>
+				<reportElement x="154" y="0" width="100" height="20" uuid="f33dd4f5-5c6f-471b-aa83-1139a20b260d"/>
 				<textFieldExpression><![CDATA[$F{author.shortFIO}]]></textFieldExpression>
 			</textField>
+			<componentElement>
+				<reportElement x="0" y="83" width="177" height="42" uuid="17802b38-2679-443a-bb26-2226f6752abc"/>
+				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128A" drawText="true" checksumRequired="false">
+					<jr:codeExpression><![CDATA[$P{BARCODE}]]></jr:codeExpression>
+				</jr:barbecue>
+			</componentElement>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="55" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch"/>
