--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -51,7 +51,7 @@
     
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateFolder}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateDoc}" />
-    <ui:param name="_updates" value="#{fileUploadFRM}" />
+    <ui:param name="_updates" value="fileUploadFRM" />
     
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns">
