--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/docstatus-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/docstatus-list.xhtml
@@ -42,7 +42,7 @@
             </p:column>
 
             <p:column headerText="#{bundle.DocStatus}">                                    
-                <h:outputLabel value="#{item.status.localName}"/>
+                <h:outputLabel value="#{item.status.nameEndElipse}"/>
             </p:column>
 
             <p:column headerText="#{bundle.DateStatus}" width="90">
