--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
@@ -13,6 +13,6 @@
     <ui:param name="_explorerHeader" value="#{explorerBean.getLabelFromBundle('DocStatuses')}"/>    
     
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
-    <ui:param name="_CreateItemLabel" value="#{bundle.CreatePost}" />
+    <ui:param name="_CreateItemLabel" value="#{bundle.CreateStatus}" />
     
 </ui:composition>
