--- a/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
@@ -19,8 +19,8 @@
                       label="#{bundle.SelectFile}" 
                       cancelLabel="#{bundle.Cancel}"
                       uploadLabel="#{bundle.SaveFiles}"
-                      fileUploadListener="#{explorerBean.onUploadFile}"                      
-                      oncomplete="document.getElementById('#{_frmExpl}createItemBtn').click();">
+                      fileUploadListener="#{explorerBean.onUploadFile}" 
+                      oncomplete="document.getElementById('#{_frmExpl}:createItemBtn').click();">
         </p:fileUpload>
         <pe:tooltip for="file" value="#{bundle.DragAndDropFile}"/>
 
