--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
@@ -7,7 +7,7 @@
     
     <pe:layoutPane position="south" >
         <h:form style="font-size: 85%;" id="explorer_south">
-            <h:panelGrid columns="2" columnClasses="ui-grid-col-12 without-spaces" styleClass="ui-grid-col-12 without-spaces">
+            <h:panelGrid columns="3" columnClasses="ui-grid-col-2 without-spaces, ui-grid-col-8, ui-grid-col-2" styleClass="ui-grid-col-12 without-spaces">
                 <h:panelGroup>
                     <p:commandButton value="#{bundle.GotoIndex}" title="#{bundle.GotoIndex}"
                                      id="btnCancel" ajax="false"
@@ -21,10 +21,16 @@
                                      action="#{explorerBean.onClose()}">
                     </p:commandButton>
                 </h:panelGroup>
-                <h:panelGroup styleClass="without-spaces pull-right">
-                    <p:outputLabel value="#{sessionBean.getCurrentUserPost().name}" styleClass="without-spaces"/>
+
+                <h:panelGroup styleClass="pull-right" style="padding-top: 3px;">                    
+                    <p:outputLabel value="#{sessionBean.getCurrentUserPost().name}" />
                     <p:outputLabel value="#{' '}" styleClass="without-spaces"/>
-                    <p:outputLabel value="#{sessionBean.currentUser.shortFIO}" styleClass="without-spaces"/>
+                    <p:outputLabel value="#{sessionBean.currentUser.shortFIO}"/>               
+                </h:panelGroup>
+                
+                <h:panelGroup styleClass="pull-right" style="padding-top: 4px;">
+                    <p:clock pattern="HH:mm:ss dd.MM.yyyy" mode="server" id="serverTime"/>
+                    <pe:tooltip for="serverTime" value="#{bundle.ServerTime}"/>
                 </h:panelGroup>
             </h:panelGrid>
         </h:form>
